Failed to fetch DirectShow devices
there is no Mic in list
dshow error: Failed fetch devices: CoInitializeEx failed
||ver||3.0 x64 ||win ||10
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont assigned to @chouquette
assigned to @chouquette
- Owner
Could you make sure to give us less information? So we are sure that we are unable to reproduce and fix?
- Jean-Baptiste Kempf added Status::needs more info label
added Status::needs more info label
- Jean-Baptiste Kempf closed
closed
- Developer
I can reproduce.
Device listing is broken, but playback from the default capture device works fine
- Hugo Beauzée-Luyssen removed Status::needs more info label
removed Status::needs more info label
- Hugo Beauzée-Luyssen reopened
reopened
- Developer
Fixed in ||=
0dece1534e
=|| dshow: Use COINIT_APARTMENTTHREADED to list devices || - Hugo Beauzée-Luyssen added Status::fixed label
added Status::fixed label
- Hugo Beauzée-Luyssen closed
closed
- Developer
For future reference: https://bugreports.qt.io/browse/QTBUG-40632
- Jean-Baptiste Kempf changed milestone to %3.0 FF
changed milestone to %3.0 FF
Please register or sign in to reply