dshow: Use COINIT_APARTMENTTHREADED to list devices

This is most likely coming from a Qt thread, which is already
initialized as STA. If it is not coming from a Qt thread, then we don't
really care since the API also work when called from a MTA, and we
release the threading apartment once we're done (which was the real
culprit for #16935)

Fix #18482